Fixing bug 79475. resizeTo() and moveTo() on a frame resizes the toplevel window. r+sr=bzbarsky@mit.edu